--- a/css/base.css
+++ b/css/base.css
@@ -44,7 +44,7 @@ body {
 }
 
 nav {
-  width: 100%;          /* full viewport width ignoring scrollbar */
+  width: 100%;         
   left: 0;
   top: 0;
 }
